--- a/src/assets/style/App.scss
+++ b/src/assets/style/App.scss
@@ -108,7 +108,7 @@ header {
 
 .header-title {
   color: black;
-  font-family: 'Nunito' !important;
+  font-family: 'Nunito';
   font-style: normal;
   font-weight: 700;
   font-size: 56px;
@@ -273,8 +273,16 @@ header {
   background: #0197d5;
   color: white !important;
 }
+.btn_log__out {
+  border-radius: 0;
+  height: 35px;
+  font-size: 14px;
+  background: #e2352f !important;
+  z-index: 1000;
+  color: white !important;
+}
 .navbar__search {
-  max-width: 300px;
+  max-width: 450px;
 }
 
 .v-navigation-drawer {
@@ -302,7 +310,7 @@ header {
 }
 .drawer__bottom {
   position: absolute;
-  bottom: 5%;
+  bottom: 0;
   width: 100%;
 }
 .text-muted {
@@ -334,9 +342,6 @@ header {
   background-image: linear-gradient(#383351, #42222d);
   color: white;
   font-family: Nunito, sans-serif;
-}
-.v-list-item {
-  margin-bottom: 10px;
 }
 .v-list-item .v-list-item__title {
   font-family: Nunito, sans-serif;
@@ -382,10 +387,15 @@ header {
   border: 1px solid #ccc;
   -webkit-box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%);
   box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%);
-  -webkit-transition: border-color ease-in-out 0.15s,
+  -webkit-transition:
+    border-color ease-in-out 0.15s,
     -webkit-box-shadow ease-in-out 0.15s;
-  -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
-  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+  -o-transition:
+    border-color ease-in-out 0.15s,
+    box-shadow ease-in-out 0.15s;
+  transition:
+    border-color ease-in-out 0.15s,
+    box-shadow ease-in-out 0.15s;
   height: 44px;
 }
 .navbar__search input:focus {
