--- a/src/assets/style/App.scss
+++ b/src/assets/style/App.scss
@@ -2,7 +2,7 @@
 @import './fonts.scss';
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Nunito:wght@200;300;400;500;600;700;800&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 * {
   font-family: 'Inter', sans-serif;
   text-transform: none;
